--- a/2025-6-22.md
+++ b/2025-6-22.md
@@ -12,43 +12,32 @@
 《哇你好厉害你怎么什么都会》
 哇我要是和你一样有钱有资源我也不学这些啊我要有钱我不会出去逛吗我每天和极品incel一样甚至无聊到翻译萨德的小说
 
-我一想到那个我就想到少爷
-家里更有钱的少爷pro版
-哎
-我那时候我问少爷
-我觉得你这样，，，有点舔，，，你不怕别人说你是龟男吗
-狗草的
-我绝对不会再被这种人感动
-那个人再好我也不！我不！
-把我当什么了！
-没勇气追求我，只能默默视奸关怀，又感觉做事情做的很好
-零个好感
+我一想到那个我就想到少爷，家里更有钱的少爷pro版哎，我那时候我问少爷，我觉得你这样，，，有点舔，，，你不怕别人说你是龟男吗，狗草的我绝对不会再被这种人感动，那个人再好我也不！我不！把我当什么了！没勇气追求我，只能默默视奸关怀，又感觉做事情做的很好，零个好感
 
-我觉得那种有点钱的incel才是最可怕的
-空有副官方克制礼貌的壳子
-这属性只适合交际花或官老爷
-常人拥有实在是惊悚
-那种克制是把对方极致的物化啊我操了
+我觉得那种有点钱的incel才是最可怕的，空有副官方克制礼貌的壳子，这属性只适合交际花或官老爷，常人拥有实在是惊悚，那种克制是把对方极致的物化啊我操了
 
-我在想如果我是男孩我会怎么样追求现在的我，我现在太吊丝了我操了
-啊bb，这个代码我帮你写
-我带你考aws saa一年包过专业级
-我给你开个grok chatgpt gemini plus
-再帮你写个脚本搞个数字人替你社交
-再穿破腾讯的层层封锁把你最爱的阿伦导入qq
-啊贝贝这是我朋友的公司你去托管你的网站吧
+我在想如果我是男孩我会怎么样追求现在的我，我现在太吊丝了我操了，啊bb，这个代码我帮你写，我带你考aws saa一年包过专业级，我给你开个grok chatgpt gemini plus，再帮你写个脚本搞个数字人替你社交，再穿破腾讯的层层封锁把你最爱的阿伦导入qq，啊贝贝这是我朋友的公司你去托管你的网站吧
 
 web3的霸总：
 管家：少爷他，，，很久没笑了。。。没想到小姐你把老爷留下的bug修复好了，，，少奶奶的位置一定是你的
 
-太玄幻了，1950和2025的达官显贵
-我感觉老爷们也成了消费主义play的一环
-战无不胜的存在主义万岁
+太玄幻了，1950和2025的达官显贵，我感觉老爷们也成了消费主义play的一环，战无不胜的存在主义万岁
 
-我说我看张学良历史搁哪ptsd啥呢，惊悚，那时候寻思要真去了云南不得给这byd弄死
-想来可能是我虚惊一场，我是真怕，毕竟我又不知道这byd嗑药了会不会发癫，再说了我哪懂他们这种婆罗门的心理
-他和我说他爸给他零花钱好少好少，我寻思挺多的，现在回想起来他那级别确实是够少了，好死好死。云面大可这一块
+我说我看张学良历史搁哪ptsd啥呢，惊悚，那时候寻思要真去了云南不得给这byd弄死，想来可能是我虚惊一场，我是真怕，毕竟我又不知道这byd嗑药了会不会发癫，再说了我哪懂他们这种婆罗门的心理，他和我说他爸给他零花钱好少好少，我寻思挺多的，现在回想起来他那级别确实是够少了，好死好死。云面大可这一块
 
+哇，海带头完美符合张学良人设
+风流——√
+附庸风雅——√
+嗑药——√
+敏感——√
+富二代——√
+边境王二代——√
+渴望被女人关怀——√
+大爹父亲——√
+迷信——√
+喜欢英美文化——√
+二十五六不能独立——√
+哇，完全满足
 
 淮扬菜有啥名菜,我觉得我昨天做的那个鱼，用的是淮阳菜的手法做出粤菜的风味,我在复盘昨天那鱼的处理手法
 
@@ -69,27 +58,7 @@ web3的霸总：
 因为要给主厨足够大的创作空间，这样子才有这个料理的最大发挥，我是这么认为的
 就说一栋真正高档的饭，他绝对不是说你的食品有多高档，因为人类干了这么几千年了，吃来吃去就那些，也绝对不是说在屎上雕花这种什么把鸭子皮上面雕刻出来各种各样的字了之。类的雕刻一篇古诗文名篇啥的
 
-朴正熙简直是我的游戏搭子
-我这两天情绪不是很好
-我一想到九月去学校之后
-遇见那些婊子和公子哥
-我就痛苦的不想期待任何了
-“我会让你幸福的”
-我真不明白为什么有些人搞得比我当事人还难过
-问题在于我也很寂寞
-伸手不打笑脸人
-可能是少爷们想找点不一样的乐子
-想杀人，还好我是一个只爱写代码看谭咏麟的女人
-我得给自己写个新生活规则了
-我的命好苦啊
-女人总想弄死我
-把我当敌人或者男人的代餐
-男人总想拿我满足弥赛亚情结
-穷鬼当自己演卖油郎独占花魁
-公子哥当自己演桃花扇
-男的更贱，贱的没边了
-不过经历一些小小的困苦真正爱我的人会浮出水面
-我觉得开心
+朴正熙简直是我的游戏搭子，我这两天情绪不是很好，我一想到九月去学校之后，遇见那些婊子和公子哥，我就痛苦的不想期待任何了，“我会让你幸福的”，我真不明白为什么有些人搞得比我当事人还难过，问题在于我也很寂寞，伸手不打笑脸人，可能是少爷们想找点不一样的乐子，想杀人，还好我是一个只爱写代码看谭咏麟的女人，我得给自己写个新生活规则了，我的命好苦啊，女人总想弄死我，把我当敌人或者男人的代餐，男人总想拿我满足弥赛亚情结，穷鬼当自己演卖油郎独占花魁，公子哥当自己演桃花扇，男的更贱，贱的没边了，不过经历一些小小的困苦真正爱我的人会浮出水面，我觉得开心
 
 男人篇：
 1.警惕一切主动示好的男人
@@ -106,9 +75,34 @@ web3的霸总：
 4.不当众自我评价
 5.不要在他们面前沉浸自己的事情
 
-女人哭吧哭吧不是错
-女人防不胜防
-贱婊子别让我遇上
-一年家里蹲的底层INCEL和你爆了
-别招惹女的就行了
-可是真不明白什么叫合群
+女人哭吧哭吧不是错，女人防不胜防，贱婊子别让我遇上，一年家里蹲的底层INCEL和你爆了，别招惹女的就行了，可是真不明白什么叫合群
+
+继续读《政治的人生》
+
+"凌晨读《斯大林时代的谜案》，从反面来批判斯大林，几乎把斯大林说得一无是处。这就是一个伟人身后最容易发生的事情。一是继续维护他的威信，用来达到某种目的，另一种倾向就是否定他的功绩，来达到另一种目的。社会或者说历史往往就是在这两者之间选择。但是无论如何选择，总是摆脱不了伟大的人物。没有了伟大人物就没有了历史。反过来说，没有了历史就没有了伟大人物。关键还在于历史是谁创造的，人们创造了历史，历史往往塑造伟大人物。"
+
+"国内很多地方发大水，各地在组织救灾的活动，十分感人。有的时候一个社会需要轰轰烈烈，没有了轰轰烈烈，社会就会变得平庸。中国这样的超大社会，在平庸中就会懒散，就会分解，就会产生离心的力量。当然，像自然灾害这样的轰轰烈烈，是一种灾害性的强制，是没有的选择。如何能在平淡中产生一种轰轰烈烈和壮丽，的确不容易。"
+
+我觉得我不想字里行间揣摩他揣摩中国政治了
+
+"没有精神上的痛苦快乐的人，难道可以作为一个来过这个世界的人而存在吗？难道是一个有过真正的生命的人吗？为什么不是？为什么是？需要一种创造的快乐。"
+
+我明白吉伊卡哇、自嘲熊、猫猫虫这种可爱形象为什么我会犯恶心了。因为会特别喜欢的不是小仙女就是小仙男，尤其是男的，普遍给人一种令人作呕的痛苦感。别人的痛苦叫破碎美，那种人是呕吐物状的破碎，别人避之不及。这种人咋不去死呢？一无是处的东西。我直接一把捏死。那种又懦弱又有点本事但是缺胆气的更是一把捏死，因为我可能会喜欢天呐同情心上来了。
+
+哎我操，要再在我面前表现出怯懦我就一巴掌扇死。就那个婆罗门身份和大好资源还好意思在我面前表现出自卑感，我都还没发作你先发作啥意思我直接一巴掌扇死算了。“哇你好厉害你怎么什么都会！”哇，我要是和你一样有钱有资源我也不学这些啊，我要有钱我不会出去逛吗？我每天和极品incel一样，甚至无聊到翻译萨德的小说。
+
+刚刚看见一个网剧男演员长得还挺像少爷，有点像，额我真的，主要是我觉得有点帅很羞耻，然后他俩还真是一个专业。他啥时候死啊，死了我吃席。从来没讨厌过一个人成这样，太下贱了，减重去死。
+
+其实我是一个保守主义的跨性别，我的内心是一个绝对保守派的男性，所以我遵从我的生理性别严格按照传统女性的社会分工来自我表达
+
+谈恋爱有啥意思，不如YY有意思。哎我再也不扣自己了，给自己神经带来一点小小的色氨酸震撼，真是受不了。
+
+少爷这个人太恶心了，我感觉他出现的意义就是成为一个负面信息让我恐男，垃圾。如果你不敢喜欢一个人那你就不要接近人家，被人家一次次拒绝反倒感到安全，这样的模样实在是太恶心了，如果喜欢SM应该去找帝都的女王而不是烦我。
+
+不要再生产一群被阉割的公子哥送到社会上来了，他们应该早早订婚，严格遵守凝视下的生活规则，而不是祸害我这种好女人。我发现我对芹哥哥那么宽容纯属是因为芹哥哥又高又帅，看见他生理欲求远超情绪索取，所以无所谓他怎么样，他的怯懦我只觉得可爱，何况他还真的改变了很多呢，哇想到这个我都要高潮了。
+
+我感觉我需要有人给我生的希望，我不是一个冷酷到谁都不喜欢的人，我只是需求和常人不一样，我实在是熬不起了。一山不容二虎，我卖惨你不准。哎，有点幸福不起来了，可能是神经递质前体不足。我这样的出身以后不管是怎么样的活着都算是翻身把歌唱，地狱开局。
+
+纯情绪价值实在是人太多了，你JB谁啊，大家都一样下贱能者胜出。我感觉和我交朋友好像是玩游戏，就得氪金和花时间，自由度还差，还有概率血本无归，虽然是说我这个人本来就不喜欢别人有啥目的性，要钱我是没有的，但是当当苦力给你修电脑写个脚本啥的还是JUST SO SO。哎我操我仔细回忆了一下，我在学校里惹祸真的会有人帮我和稀泥哎，虽然是我的错。我也是神人了，又想吃软饭又要讨厌人家，主要是我啥态度其实是不重要，喜欢我的不就喜欢这种下贱劲吗，自己挣得家里的资源那么多分我点那咋了，红尘滚滚博红颜一笑又何妨，我有钱我就乐意给聪明可爱的女人点好处让他多开心，这样世界更美好，吃软饭是错误的，只是资金困难暂时的迁就而已，靠智力吃饭。
+
+我是伏尔泰，被贵族包养只是为了更好闹革命，并非保皇党
