--- a/2025-6-23.md
+++ b/2025-6-23.md
@@ -4,16 +4,9 @@
 
 哎幻想有学长愿意给我带实验室安置在一个小角落给我行个方便写脚本，闲暇之余还可以指导我写的代码，最好把他的itx能借给我用表示每天泡实验室用不上让我跑ai，支持每一个热爱互联网的年轻人，还表示可以共享chatgptplus或者claude
 
+哎打开genymotion那一刻感觉自己实在是魅力超群，难道没有人因此喜爱我吗，不觉得我捣鼓计算机很有魅力吗
 
 复盘性别和性取向，我的生理性别是女性，并且是一个外形非常标准的女性，有很大的乳房和屁股。腰臀比是0.7，达到了审美上普遍的最佳。容貌大气明艳，非常大的眼睛和浓密的睫毛还有剑眉很有特色，短下巴带来可爱的感觉，整个人并没有那么犀利的五官。我的心理是一个男人或者非二元，FTX或者FTM，我不能认同女性身份，但是我可以以女性身份生活，因为我知道这样可以带来利益最大化。而且我更希望自己是一个伪娘，并且我接受社会的性别分工，事实如此，我们社会还没那么进步，我只要自己心理清楚就好了。我的性取向是双性恋，不喜欢跨儿，因为那种人往往给我一种孱弱的印象，我喜欢天然强大的生命力。女人我喜欢，但是女人往往需要依靠别人，我不想倾斜资源。当男人的女人就好得多，可以接受资源的倾斜，也不需要像女同性恋里的女人一样非得表露出一副可以让对方感到被依赖的脆弱感。
-
-
-
-
-
-
-
-
 
 啊我的贞洁，那时候只有十五六的身体，一点都不可爱，不端庄，那时候我还是太西方了，现在我是一个传统的东方女人，我现在连一点点暴露的衣服都难以接受的保守派
 
@@ -43,7 +36,3 @@
 
 "计算机专业和历史上的神学是一样的。神学是学习怎么和上帝沟通，计算机学是学习怎么和计算机沟通。AI来了等于新教革命，人人皆可以和上帝沟通，无需梵蒂冈的教廷。"
 
-
-git add .
-git commit -m "2025-6-22.md"
-git push
