--- a/2025-6-24.md
+++ b/2025-6-24.md
@@ -36,12 +36,9 @@ if you want to convince a woman, you should appeal more to the passions than to 
 
 什么时候我也能有一个体制内家庭官二代央企中层管理当我的小男娘性奴,因为家庭和工作原因不能o雌二醇所以还是纯正男儿身的小男娘，成为我的性奴.我叫他操我就操我，在家里只能穿着女仆装为我端茶送水，在他给父母打视频时候悄悄的摸他的腿和鸡鸡，那太好了，哎我什么时候能遇上一个这样的小男娘，那我男人和女人的红利都吃到了，如果给我当老公，我就写一个小说，填补跨阶级爱情叙事缺乏跨性别爱情的空白
 
-谁娶我就是娶回家一个中年老男人,意识到我的内心是一个1980生的中年男同性恋，我就对我喜欢老派男士一下子释怀了，太年轻的做派我觉得轻浮又合不来，我的爱好全是阳痿的中年男最爱，我又开始玩无线电了，那我和我老公实在是世界上最好的好兄弟了，寂寞了还可以草草逼，我们上辈子一定是老死一场这辈子当夫妻
-我不喜欢被操逼原来是因为我是一个男人我怎么会有逼呢，我是一个太子爷啊，我怎么会有这样的身段呢
+谁娶我就是娶回家一个中年老男人,意识到我的内心是一个1980生的中年男同性恋，我就对我喜欢老派男士一下子释怀了，太年轻的做派我觉得轻浮又合不来，我的爱好全是阳痿的中年男最爱，我又开始玩无线电了，那我和我老公实在是世界上最好的好兄弟了，寂寞了还可以草草逼，我们上辈子一定是老死一场这辈子当夫妻，我不喜欢被操逼原来是因为我是一个男人我怎么会有逼呢，我是一个太子爷啊，我怎么会有这样的身段呢
 
-不过言归正传，为什么我的心理和思维都那么双性呢
-可能是解离症的原因吧，我没有恋爱的勇气，想到这一点，谁会喜欢我这样的人呢，我对自己的出身还有不堪的伤痛难以启齿，我太怕人的有色眼镜了，我太害怕被人误解了，被误解本就是两个人的宿命，但是我希望少一点，再少一点
-如果有我真的欣赏也对我足够好的男人，我就会选择遗忘过去，把那些东西删除，我相信神经突触的不断修剪，是可以删去不该有的创伤记忆的，作为非常严重的CPTSD患者，我因为强大的神经可塑性，其实早就适应了创伤的环境，我觉得我不会失控
+不过言归正传，为什么我的心理和思维都那么双性呢，可能是解离症的原因吧，我没有恋爱的勇气，想到这一点，谁会喜欢我这样的人呢，我对自己的出身还有不堪的伤痛难以启齿，我太怕人的有色眼镜了，我太害怕被人误解了，被误解本就是两个人的宿命，但是我希望少一点，再少一点，如果有我真的欣赏也对我足够好的男人，我就会选择遗忘过去，把那些东西删除，我相信神经突触的不断修剪，是可以删去不该有的创伤记忆的，作为非常严重的CPTSD患者，我因为强大的神经可塑性，其实早就适应了创伤的环境，我觉得我不会失控
 
 哎，我应该爬起来看电脑而不是在这里伤春悲秋，我讨厌被人关注的感觉，我讨厌，如果变得很瞩目就会被人伤害，只有女孩子才有这样的特权吧，缩起来，不过我从来没缩起来过，缩哪去，有时候想想我真是一天一天的推日子，压根没有生活过，我没什么生存下去的欲望，靠着幻想不断的刺激神经，欺骗神经我很好
 
@@ -50,3 +47,5 @@ if you want to convince a woman, you should appeal more to the passions than to 
 卖惨那么多也没人见，仇恨,哎我PTSD发作了眼泪流个不停浑身发麻冒冷汗，我好怕啊，虽然啥都没有，我一直想蜷缩起来颤巍巍的重复“痛”这个音素,哎我这个屌丝调那么多ai安抚自己
 
 我觉得好崩溃，没有人接受我这样，ptsd发作严重到可能说着说着没办法正常交流退行到只能发出单音节，虽然我会自己处理
+
+我这个游戏从名字到各方面透露着浓浓的鬼子风，我真是恨不得做个galgame发泄一下我的性压抑《我的蒋委员长绝对不可能这么可爱？！》可以攻略蒋家父子（母子？）的游戏。蒋经国是温柔帅哥捏，蒋介石是萝莉妈咪挣扎了几百次决定不要赛璐珞风格实在是还是半厚涂
