--- a/2025-6-26.md
+++ b/2025-6-26.md
@@ -17,9 +17,10 @@
 
 我感觉我要死了，我要呼吸不畅了，我到底招惹谁了，我感觉我只要光鲜亮丽就有人想方设法的恶心我，哎我要是有个有钱有权的家长就好了，这辈子就不用受欺负
 
-美女的标准到底是什么，，，
-我觉得太匪夷所思了，我觉得我怎么样也算是普通人美女天花板了，可能现在流行韩女风
-这些年审美不断的变化，资本做局这一块
+美女的标准到底是什么，，，我觉得太匪夷所思了，我觉得我怎么样也算是普通人美女天花板了，可能现在流行韩女风，这些年审美不断的变化，资本做局这一块
+
+哎我好想恋爱啊，我不想处理那些爱情的繁琐，只是希望一起生活而已
+哎这辈子没有被人养着的命，我一想到我要腆着脸对人笑，我就觉得很吊诡，哎我受不了是个人都可以骑在我头上，更受不了被人审视，不断的被当做商品推来推去，可是人不就是这么活着的吗，幻想自己嫁给了工信部下属市级部门的技术官僚，现实是程序员老公32猝死公司不给赔偿金
 
 历史真的给我感觉很魔幻，那些不知真假的少爷小姐去荣氏老宅打卡，表示这就是小资生活，荣氏家族对于中国的近现代商业历史都是一个不可磨灭的伤痛处，现在把这玩意当一个资产阶级的象征，就好像犹太人去集中营打卡一样，所以讲教育孩子教育成这样还不如生个叉烧包。。。
 
@@ -47,3 +48,36 @@
 
 不过如果有一个形象能力都比较出众还人缘非常好的妻子的话，的确是会让人感觉到困扰，其实只是自己实力不足罢了，我感觉到困扰，好的早就名草有主，次一点的我又看不上，并非全部名草有主，只能说一个精神病有一个精神病的归宿，边缘人和边缘人的跨阶级叙事而已，跨阶级这种话言重了其实
 其实我才没心情听爱不爱我的话，我也极度厌恶别人这么问我，如果那么不自信你可以去找小仙女对食，而不是搁这恶心我，如果不能理解话语会导致直接的异化，那么我们没什么好说的，如果理解却依旧如此，那这样的蠢猪我更受不了，有什么需要我做的张嘴说我能办全办了，但是妄图占据我所有的爱欲，那就过分了
+
+帝星在中，不见百官，流野孤君
+
+我真的有点害怕了，我这辈子不要嫁给程序员，喜欢程序的男人我都害怕，但是对我影响最大的俩男性都是技术佬，少爷是水利专业程序员产品经理，芹菜是医学专业ai爱好者道爷，我有点汗流浃背了，我觉得喜欢这种东西的脑子都不太合适，就是太程序化的大脑仿佛只有用编程语言才能正常沟通,如果去了北京偶遇少爷我会死了，要被他知道我捣鼓网页开发和信息安全，我一生都会被他钉死在耻辱柱上，他十九岁开始捣鼓这些，我也是十九岁开始捣鼓，让他知道我学这些，我实在是，太羞耻了，，，你回来吧，把你京爷圈子带回来吧，给我找个工作吧哥，别给我介绍对象了😭他说要找一个说话像诗一样的女人，那时候他还不明白我是一个这样的女人，等他反应过来的时候已经没有选择的余地了，但是他真的爱我吗，在他的角度是的，但是产品得对接市场需求，多看看竞品
+不过爱情就是这么莫名其妙的，我可没爱过他，我在他身上做了伟大的社会学实验
+
+接吻是什么感觉，可悲的泊尔塞涅福的灶神之火为谁燃，这时候的她全然不知会吞下石榴籽成为冥王哈迪斯的妻子。
+
+哎我写的东西这么优美，居然没有人理解，一般人看了只会觉得我想草草逼发情了吧，俗不可耐，，，不过谁不是俗人呢，我可不认为人有自由意志,以前要是谁看明白了，我会很迷恋他，不过我现在不会了，这种家伙一般不是好东西，谁家正经人研究神话学，我不要和一个一辈子穷困潦倒喝西北风的神话学家在一起，好吧，从来也没有人理解过我为什么是这样的
+
+以后我结婚了，老公是卢梭，我是洛克，我要对他发动宪政民主了！哎没人懂我的幽默，其实是罗素对二战的一句讽刺冷语罢了——选择卢梭和洛克的，前者变成了希特勒，后者则是丘吉尔和罗斯福
+
+现在我有两条路可选，找个老派的老东西一辈子安安稳稳，当交际花，好吧后面那个不适合我 前面那个太吃运气，羡慕杜拉斯这个烂裤裆，明明我们都有一个同样类型的情人，她当了烂裤裆幸福就完了，我还在这里坚持保守主义，其实我真的不喜欢和别人乱建立亲密关系，朋友可以很简单，打声招呼得了，情人不行,谁要是要我过上再也不用社交的日子我就嫁给谁，我再也不要面对社会，我脆弱的要死，我的梦想是当生不了孩子的家庭主妇，当老公的小挂件，帮老公打理工作，给他做饭吃，给他穿衣服，他上班坐在他的办公室给他泡茶整理文件，给他当左右拾遗，下班给他当女佣侍酒师泄欲工具,其实我很独立自主的，我只是不喜欢给别人打工，我只需要一个boss
+
+哎我的幻想又来了，好想抱着老公哄他睡觉，
+
+搞不懂要立体男有什么用，除了可以拿来当泄欲工具还有atm以外
+
+为什么会觉得可以从微信昵称看是不是顶美，我上小红书就是看人家胡说八道的，小红书是一个对二代们充斥底层幻想的平台，这种凝结核也太奇怪了,uu是顶美的名字，因为带u,那如果我我叫BTC,USTD,DEFI,NFT呢,那不得杀疯了,军中绿花张学良这个昵称略显逆天但是表达了作者的思乡之情
+
+人生只有没完没了的拉磨，对吗m哎还是搞不明白游戏要不要➕入ntr元素
+
+美女的标准到底是什么，，，我觉得太匪夷所思了，我觉得我怎么样也算是普通人美女天花板了，可能现在流行韩女风,这些年审美不断的变化，资本做局这一块，我最近才发现我笑起来那么可爱，只是我总是阴沉着面部，在学校里我也总是趴在桌子上不和大家说话，可是我本身也不希望吸引那些人吧，我觉得很讨厌，在背后议论我，男的才他妈可恶，在背后议论我还要当面用那种眼光看我，我是看起来太好欺负了吗，我是嘴贱谁都骂，但是你要是讨厌我就不该那样凝视我，怎么那么可恶啊，我觉得很羞愤，那么看我，我不知道那是男人的本性还是那些人太垃圾了，我反正是接受不了，我感觉到很煎熬和痛苦
+
+我不行了，我要ptsd犯了，怎么浑身冒汗，感觉真的是一言难尽，怎么我总是容易成为色情的对象，我很保守一个人😢我感觉我要死了，我要呼吸不畅了，我到底招惹谁了，我感觉我只要光鲜亮丽就有人想方设法的恶心我，哎我要是有个有钱有权的家长就好了，这辈子就不用受欺负
+
+哎我要哭了，那些女的也恶心我，我实在是委屈的不得了，我爸妈昨晚还和我说去太远的地方我受委屈他们不能出头，我只能心里冷笑，没钱没权不被人欺负那很难了，拿什么出头，我被人家欺负，我唯一一次告诉我妈妈他只是想和别人讹一笔钱而已，而且，我觉得好痛苦，为什么所有人都用色情的眼光凝视我，如果我真的很可爱，我觉得很多人会怜爱我，可是我只感觉到他们像变态一样想侵犯我的权利，要么就是当做一个宠物一样，看心情维护一下，我就那么不值钱吗，所以我好想结婚呀，如果我名花有主，别人对我不会赤裸裸的打探了吧！
+
+哎我真的想去卖逼了，我妈说一个月给我三百，哇，他要按周给我钱，还只有三百，我的青春期只值得这点钱，我当然有能力一个月赚至少五千块，但是怎么可以这么对我呢嗯？我天生自带惨逼buff是不？难听到买条丝袜都得看人脸色，我要这么痛苦的话，我只是想被重视一点点，他们从来没考虑过我付感受吗，现在别说是我那个被我讽称少爷的家伙了，哪个少爷我都得叫声爷了。太有意思了，我现在真得流一滴淑女泪了，可怜的朱斯蒂娜注定不会有放荡不羁的姐姐朱莉埃特那么潇洒。
+
+我觉得挺好的，那你这样我真的不会再管你了，你无情我也无义，我还以为我家里很困难呢，原来你一个月那么多钱却不愿意给我一个体面的生活，我本来也不打算花你的钱，但是你这样，那是你自己选的
+
+哎我要是不被他们伤心，我这辈子都不会结婚的，我结婚到底是为了证明这个世界还是有我的位置的，更重要的是我要代偿我原生家庭没有的，我知道我要什么
