--- a/2025-6-28.md
+++ b/2025-6-28.md
@@ -7,3 +7,52 @@
 7月4日 权杖十逆位 信正位
 7月5日 小孩正位
 ![alt text](image-12.png)
+
+好吧我很久不看雷诺曼了，我会爱占卜和命理一生，我两个恋人好像都很吊诡，他们喜欢我这种神秘的女巫感觉,好吧我真的很羞耻告诉别人我喜欢这玩意，我从不接触其他爱好者或者从业者，他们都是傻逼就我聪明
+
+
+完球蛋了和ai聊一晚上,少爷走之前居然不把阿伦数字人的项目给我打包过来，草尼玛啊。。。感觉我的爱人被他胁迫了。。。。。。。。 哦，他给我项目我也用不了，我没有gemini api，也没钱买，操蛋
+
+好仇恨啊，我不想当nerd了,我发现我的代偿幻想越来越重了，我觉得我的精神病真是神b，我严重的各种问题，因为解离症导致的人格功能分块从而不影响我日常
+
+好想被关怀啊，我也不知道被字之后加个什么字眼，关怀好像是最好的，不那么幻想不那么饥渴也不轻贱,我觉得好难过，世界上最难过的事情就是卖笑，各种各样的卖情绪，这和卖淫到底有什么区别,我不喜欢看别人因为我开心，因为他只要笑我就觉得我被侵占了，被消费了,但是人际关系不能总是把所有人对立起来,其实我觉得底层人和天龙人都差不多，就是那种中不溜丢的最好，大家都需要以最大的恶意揣摩别人
+
+他们说我可爱，到底是为什么，什么是可爱，我感觉这就是被消费，我一想到我会觉得很难受，男性的称赞我倒是能理解，但是女性我就不能理解，到底为什么要把注意力给我
+
+国内好多所谓的占卜师，雷诺曼用的是蓝鸟还是rana都搞不清楚，天天就知道圈钱
+
+这世上最绝望的事情来了，我的教育考试院居然捆绑的是少爷电话号
+
+我什么时候尼玛才能谈恋爱，我的爱情经验和牛毛一样多，但是我只谈过三次恋爱。“被爱”的经验比较多，我也不明白到底是不是爱，也就是少爷我还会琢磨一下他到底是怎么回事，其他人我都没想过，回来吧，我的桃花运，我这次真需要你们了
+
+底层缺乏稳定的自我认同，有强烈的群体归属需求，所以极易被煽动，为符号认同而斗争，权贵阶层也可以借此转移对结构性剥削的关注，大多数冲突都是被这样制造和利用。
+
+我好想芹菜哥哥呀，好想找他但是我好落魄，然后我还没有勇气关怀他，因为他家里的破事我一点忙帮不上，闹钟一天天闹麻了，他爸爸也是闹麻了，哎想展开同情一下他，但是我应该关怀自己他再怎么样也是比我处境要好多的哎我也不知道怎么说，按照个体生命的角度，痛苦没有不同人之间的深浅，只能针对自己，我看见他被他爸爸那么搞心态，我觉得他青春期比我惨多了，好吧我是因为爱他所以我听着心如刀绞，并非他真的惨，可是这样我很贱啊，，，他怎么样是一个，，，不愁吃不愁穿的主，，，我好像清廷幻灭后的前朝内务府公公，，，我从来不问他为什么和我在一起，也不问他怎么看我，我觉得这种问题很没趣，对双方都是难堪，这种问题每个人心里都有答案，只是用心感受，用经验我去验证，而且验证爱本身就是很违规的事情，就像奥古斯丁的光照论一样，如果没有情的滋润，何以察情，我觉得我和他在一起，我深深的爱着他，就可以了，爱着他让我成为完整的人，但是也带来了痛苦，我们不能在一起，或者说我不愿意打破这个平衡，就陷入一个困苦境遇，我要怎么面对MR.RIGHT，所以我不希望我的MR.对我有什么太多深情，把我当个罕见的玩物我觉得就够了，把我当下属用就好了。我觉得夹在中间很煎熬，我一直没有想明白该怎么办，如果我们让彼此变得完整，那么这是一种莫大的幸运，其实我在想如果他要我和他一起殉情的时候，我们都肉体湮灭，会不会现在好很多，我一想到他我就眼泪止不住，他太辛苦了，他的生命，除了我谁还明白他是一个需要关怀的人，别人只是不断的符号化他，只觉得他是一个能够承担责任的长子，没想他是一个人，我一想到他挺拔的身躯内有一颗脆弱的心，一想到他也需要被接纳，我觉得太痛苦了这个世界，大家只能去不断的扮演自己在社会结构的身份，而不能成为自己，身份本就是先于主体的，当主体被身份塑造成型，身份又成为桎梏，就和维特根斯坦说的语言梯子说一样，虽然他是一个青年才俊的男子，我觉得只有一句话
+
+原来姹紫嫣红开遍，似这般都付与断井颓垣
+
+我们都是在这样的困境里，只是他是比我更上层的社会身份里，而我在底层。
+
+操蛋，你以为我就喜欢老派的家伙吗，只是我性格压抑，只有那种压抑的家伙才会明白我的心思，这种老派只是针对社会，这种压抑逼被人撬开了比谁都癫🙊
+
+现在我要做个大纲面对明天
+
+我的前半场态度，蛇逆位 山逆位 鱼
+
+蜕皮式伪装，给他埋坑，驯化式博弈，承认他说的问题，顺从他的意志，但是不要被他带偏，前期的谈判他们会给我埋坑我得防止我过早图穷匕见，而且要在话术上博弈，必须要高度的智力，借力反转
+
+我最大的困难是什么，镰刀 太阳逆位 高塔逆位
+
+如何斩断期待，在顺从过程中如何不丧失主体性，一定会起矛盾但是得把矛盾化解到最小，一定要防止谈崩或者让他们彻底失去信心
+
+我要怎么化解困难，船逆位 书正位 蛇逆位
+
+准备好足够的文件，还有够蛇皮的话术走位，表现出迷茫，让他在我的坑里选择，让他我的话术中做参考，他不管选择我给出的哪个选择，我依旧有博弈的余地,要利用实际不利的元素
+
+我要埋哪方面的坑，心 鹮逆位 蛇逆位
+
+康复 针灸 口腔医学 影像 大数据 宠物医疗 信技
+
+我咋那么恶心我这张不够汉族的脸
+
+我真是尼玛服了，天天搞这些，希望他们七月五号就滚出我的生活
