--- a/2025-6-9.md
+++ b/2025-6-9.md
@@ -1,9 +1,11 @@
 我觉得孤单极了
+
 所以我在看王沪宁，我很好奇他这样的人物是怎么样的心理
+
 别人考完了，准备去尝试大胆的事情，或者消费，或者旅行，我的口袋比脸更干净，我也没有动力赚钱，赚钱消耗的心力和消费不成正比，，，，
-我不知道怎么说，他们都是怎么度过自己的假期呢
-我不知道有什么意义，我没有很努力，也没有方向
-有的方向是什么,人生真是孤单极了、
+
+我不知道怎么说，他们都是怎么度过自己的假期呢,我不知道有什么意义，我没有很努力，也没有方向.有的方向是什么,人生真是孤单极了、
+
 骂了好久张学良，我觉得他就是标准的执侉子弟，感觉一言难尽
 “邓小平是比较务实的国际战略家，而毛泽东则是比较哲学化的国际战略家”
 王沪宁说话很精
