--- a/2025-7-13.md
+++ b/2025-7-13.md
@@ -27,3 +27,6 @@
 我就讨厌再遇上他这样的，痴心一片又有点小实力，少爷这人asd不懂人心，遇上个尼玛懂的怎么玩人的高阶玩家我真的会累死，天天把我整的人心惶惶，但是我就喜欢这个劲，，，芹菜这人就这样，不过我觉得不算是他算计我，只是我真的爱他爱的不得了，我就愿意当一次傻瓜任他摆布，他俩简直是一个对照实验...你要是真的爱我你怎么不愿意把你一半资产给我，那你说你妈呢，感情打不动钱也不愿意给多点，我不看钱多少，我只看占比，觉得我是个贱人也完全可以，反正他咎由自取，我对他从来也是仁至义尽了，他自己也心里应该清楚，
 
 我觉得我简直是个贱逼，我这个人太明白话语权是个啥玩意，我有钱的日子所有人都是孙子，我没钱了你们都是爷爷，我这半年仇富心理直线上升就是这样的，其实我捞偏门也不存在什么一步一个脚印吧，对二代的心理就是，有钱那是岁贡，没钱就是岁赐，反正有些狗操的就想占我便宜，不花钱还想办大事，去尼玛的，说实话我这辈子也就这样了，我一开始的愿望是有傻逼富二代愿意供养我，类似那些脑缠供上师，但是最起码我不骗人真的有点东西对不，虽然我师出无名但是实力强悍，后面发现傻逼是不能稳定的，强人又不养闲人，干真事儿我可不愿意搅他们政商那个烂场子，年初为了伟大的事业集资又决心出山工作凑资本。。。，人就是一个很从众的生物吧，当我身边人很多的时候他们像拍卖商品一样哄抬我的价格，那时候我眼里只有钱，他们对我的好也只是为了把对方比下去，哪里是对我的偏爱啊，反正有些人真的挺讨厌的，把我当个权威，我现在因为不事工作想换行业，冷清下来发现太多让人心酸的事实，但是我也不太可能老实上班了。所以我心理很委屈，因为喜欢我也只是一种征服欲上升，以前因为我那种宗教式的权威大部分人作为信男善女还不敢僭越，褪去神光之后，我的魅力其实是很色情式的，有些欲望和凝视就赤裸裸暴露于私人的场域之中，人和人的一见钟情大概都基于这种感觉吧，我这么对别人那是他的福气，但是别人这样对我我受不了，我一想到一个俗家男子和我一样的性格，就像我对别人的那种过分凝视一样去盯着我，凝视我，我尸体疼的要死，可是我现在就愿意做个俗家人，我又不可能上去说请你自重我是个修士，换句话来说其实还是有点你情我愿的意思所在的，毕竟出手相助也是我所希望的，但凡我飞起来我可不会正视任何一个意欲同我搭建爱情关系的人，反正感觉我接受迷恋我的人的好，这就是钱色交易，其实就这个性质，别说爱不爱的，有几个人明了我的心，哦我是脑缠，你说你觉得我有意思我就夜夜诉衷肠？还是从我这幅面庞中看出来我是一个怎么样的角色，说实话不了解还迷恋纯属好色而已，哪来那么多浪漫，杜丽娘爱柳梦梅那不也是先日一发，迷恋我不想日我的，我觉得此人太卑微，我接受资源我怕伤人心，迷恋我想日我的，我觉得此人太下贱，世上女子千千万，有钱的主儿总有妹把，非要盯着我，我又是个不怎么说心里话的人，就怕这种叼毛，前者我会因为对方的敏感说话有所顾忌，后者我就肆无忌惮了，说久了我也会有点上瘾，反正二两马尿下去没准哭了，无言的流泪，这种情况下不推那我就怀疑对方是gay或者别的，反正很吊诡，男人这种生物就这么可笑
+
+傻B一样霸总文看多了，以为拿他那点东西能打动我，我尼玛五年我不为所动，我就是不喜欢你，那你想干啥，天天意欲pua我，你还是和你那个干爹学学怎么说官话吧，玩人心还是这些老东西懂，其实平心而论他真的对我不错，但是我尼玛不能把我身段放太低啊，而且我感觉他压根不爱我，后面变成了一种执念吧,如果拿一些物质的打动我，那你也够俗了，当我是商k小姐？整的和那个地主老财一样，讨我欢心就不知道用点前卫的吗，压根就没有对我上心过，但是又见不得别人觊觎我，我请你不要那么强占有欲，对我不好又见不得我过的难受，这些男的都这样，技术性中产就这样，去死吧，哦有钱了不起啊我迟早把你们全图了
+
