--- a/2025-7-16.md
+++ b/2025-7-16.md
@@ -11,3 +11,17 @@
 我觉得要精神和物质都依赖别人实在是太可悲了，这种日子，对吧平时别人赶着给我送钱，我觉得靠营销实在是太无聊了，选择了硬核的技术赛道，发现没背景玩不下去，我的名人效应被我干没了，从零开始的异世界，我现在有点老实了，我一直在给自己做心理辅导，但越想越绷不住，我还是那句话：有钱了不起啊！
 
 ![alt text](image-27.png)
+
+一座建於 1926 年的百年老公寓。
+「主席的頭髮」的淡淡殘留
+你可以看到它
+![alt text](image-35.png)
+
+我对我同学就这样
+![alt text](image-36.png)
+
+![alt text](image-37.png)
+
+
+"不管你信不信，无论男女，如果你在人群中一眼就能被人注意到，你是一个有点特别的人，那你必须要成为狠角色，成为强者。否则，弱者会对你嫉妒，强者会对你失望。你的人生远比普通人坎坷，你吃的亏，会比其他人更多。"
+义不敛财，慈不掌兵，我今天早上还想这事儿呢，我有点心累
