--- a/2025-7-25.md
+++ b/2025-7-25.md
@@ -23,3 +23,13 @@
 你会考虑这个人的工作发展各种的
 
 我不考虑，喜欢就是喜欢，也会考虑高攀适配，适合就是适合。喜欢的话，乐一天算一天，而且有老公了那咋了？俩人喜欢是因为情感上、爱好上、精神上，又不是操逼上，操逼不是必要性因素。那说白了就是好朋友，好朋友和老公区别就是一个可以操，一个不可以。而且聊骚是很无聊的，我觉得他妈傻B。谈恋爱、结婚、交朋友，到底是身份大于主体吗？如果说身份比人本身重要，那么才要考虑现实。如果人比身份重要，那就不考虑了。既然人比身份更重要，何必要有个身份？人不应该执着于有的没的的关系，爽就完了，还想这的那的，烦不烦？就好像齐泽克著名的笑话：女朋友永远不会迟到，如果迟到了他就不是我的女朋友了。我的观念都很后现代吧，只能这么说。我是出于为了更好的自由，才要现实更高的身份，其实更高的身份也代表更多的拘束，只能说做个取舍吧。
+
+我去死啊，我大概摸到什么叫体制内边缘的味了，我也明白为什么我和这些人老混在一起了，被需要比起被喜欢更重要，。。。。。。。。。。。。。。我感觉真割裂说实话
+
+。。。。。。。。。。。。官二代倒逼亲爹，学什么卓文君呢，最后不得不认孙子还是认了俩人，要是和薄熙来他家一样把女的连娃杀人灭口就哈死我力，那老爷子和王震混的，性格也不会像谷开来那么极端，我感觉为人算是那一群里比较像人的,其实我理解他们一家子，老爷子做二司令的，和我一样的，正主就什么都没了，王震一死他又不像李早就扎根在系统了，做生意又没头脑，玩官倒轮不到他，悲惨呀悲惨（李是李富春）
+
+北京官场最底层的政斗都那么凶残，少爷吃得消吗，没有我的日子他能摆平吗，对不起呀我觉得你不是我要的那个明主，我走啦，我对你心生怜悯你却不要我的好，那你自生自灭吧，不求有功但求无过吧，宝贝
+
+今天一件事，让我不禁思考业力的问题，朋友的家人是王震的贴身秘书，上世纪在新疆称王称霸混的风生水起，回到北京家破人亡。。。
+
+底层人那种脆弱的自我，必须要用幻想来维护，一个捏造出来的身份就可以让他们集体高潮，今天和一个男的说话，就让我感受到这种东西，还有他们脆弱的理想，把逃避现实当做理想主义，问道能为理想付出几分代价时便不语，我说我受福音的事情，便卖弄起那点可笑的知识，马克思说的什么精神鸦片，很可悲了,说自己是无神论，但是分不清物我关系，精神上拒绝成长，要作为一个巨婴生命着，我说真的有点受不了底层屌丝，基督教哲学上承古希腊下启后现代，我理性的选择成为YWHW的子民，又怎么了，每个人的心灵都需要归宿，否定这种需要也是否定人性
