--- a/2025-7-31.md
+++ b/2025-7-31.md
@@ -5,3 +5,5 @@
 网上说塔拳一体，开玩笑，拳不管男权女权涉及到的都是权力运作的问题，怎么可能真的让官方接受
 
 安吉拉的萨德式女人这本书值得再读一遍
+
+我感觉我是无药可救了，我心理到底在想什麼，，，好想快點結婚啊，我說到底還是無能之輩，不然怎麼會這樣，我不明白我不明白。。。我需要冷靜，我很寂寞，寂寞的發瘋，夜裡衹有我一個人看著書，就是我覺得很寂寞 但是一想到還有一個人和我一樣寂寞我就覺得 很奇怪我這個人實在是太奇怪了 我想要的太多了又很少
