--- a/2025-7-7.md
+++ b/2025-7-7.md
@@ -35,4 +35,7 @@
 
 ![alt text](55a376db0877c58fa3ce2fef8eb5dbaa.png)
 我前些日子一直想少爺這種到底適不適合我，我會不會因爲心高氣傲錯過良緣，畢竟嫁給這種家裏沒背景但是自己有能力的技術佬也不錯，但是上限太差了。當個下層中產階級我自己也能，我就感覺自己有點懊悔，又爛的努力了，又信心滿滿，覺得自己能力加上還有其他可以，就我這個社會地位少爺這都算上嫁了，人家尼瑪名校出身公司管理層，但他一直在舒適區裏，不思進取，他非常賞識我的頭腦，但是他听我的建议又没有能力落实，我感觉很难受，我的梦想是当张良，遇见自己的刘邦，打天下，我和他说了咋调动北京的资源去做公司，我说你按部就班上班当个副业才合适，他也觉得男儿有志在四方，何况我还是王牌辅助，就是太操蛋了，他让我看不到诚意，我就走了，就可惜我是女的，如果是男的，老板赏识的话确实也可也成功，但是女人没这种机会，老板赏识你到那种程度大概率就要操死你了，那就一开始找个这样的老公，这种一把手和二把手最重要是信任，男人可以一起去曹操比，男人女人就是在一起草操比，我看过少爷如果和我结婚，受到我的鞭策一定会为了家庭在字节跳动或者阿里华为这种逆天公司996，然后大概率猝死了，我那时候想呢，嫁给他也许不错，他每天去工作，我自己捣鼓自己喜欢的，我就拿着他的钱，其实我不喜欢他，我和他谈恋爱也是想早早结婚，因为我又不在乎谈恋爱的，我一想到他上班花不了几个钱天天通宵达旦加班，我不就美美的和有钱寡妇一样了，没事喝个下午茶啥的，但是我后面发现我压根不是躺平那种类型，少爷千千万万不能成为公司高管年入百万啊，因为我能嫁个好的实现人生理想这种八字没一撇，运气成分太大，他是真有可能啊，不过没有我他胜算要小一点，他的人情世故做的太烂了，还有就是，我早他妈的发现一件事，我尼玛社交关系好，别人对我真不错，尤其是社会地位比我高的那些，社会地位比我低的听我说话有耐心那他这个人识货，社会地位比我高还耐心听我激扬文字的，大概率并不是因为我多聪明听我说的，我说的内容只是附加品[呵呵]心态就是，这女的和别人有点不一样，有点意思逗一下看看啥反应，但是就这种人家这心态也带来了不少的机遇，反正往上爬很难，除非真牛逼技术大佬中科院院士预备役
+
 ![alt text](970ed28b58e5a3cef4e9627704164e0b.png)
+
+![alt text](image-39.png)
