--- a/2025-7-8.md
+++ b/2025-7-8.md
@@ -17,8 +17,7 @@
 
 老子刚刚吓出一身冷汗，我他妈发现我的人生轨迹居然和体制内关系那么大，我知道和这些人我会有关系但是没想到那么大关系，我寻思我做NGO的和民政方面有点关系算球，我真的有点害怕了，我真的有这个贵气吗，一个人的气运和位置不匹配必然是有灾祸的啊，
 
-我想起来桃子是个副处级别的官我真是对中国社会释怀了，二十八副处级，实力不高全靠父母，我看他那个脑子做官也到头了，我不知道反正没直接接触过比他大的官，反正因为他我对体制内的没那么仇恨了，主要是看到条子就想起他，对我略显羞涩的结巴样子，哎，要是我俩有一层关系我还要担心那么多？卧槽呀谁知道我那个惊恐，我是事后很久想起来查了他的警衔，反正我想起来他的模样感觉十分可爱，但是他的身份我真的很害怕，我觉得我和他短暂的相处他处处的怪异压根不像普通人，可我被甜蜜蜜包裹住压根没有思考过这么多，我还叫他辞职和我去创业吧，想起来我就想笑，我就是一辈子努力也没他出身起点高
-一骑红尘妃子笑，我俩这段露水情缘，我想给彼此内心都留下了不可磨灭的印象吧，我觉得他有点可怜了，怎么一辈子活在父母的阴影里，我有点搞不明白为什么他对我才是诚惶诚恐，他应该是没想明白为什么我对他那么好吧，完全搞不明白我的动机，反正我就觉得爱情就那么奇妙，我一见钟情一个比我大十岁的人，就那么如梦似幻，等我事后很久，我才知道他是什么人，这个也太罗曼蒂克了，一场真正的主体先于身份的情缘，想起来他羞涩的模样，我都不知道他怎么带他手下的人，想起来就好笑，我感觉我在这个方面有点魔怔的出奇了，我告诉他我不考虑和他在一起，玩一玩好了，因为我在政治方面和他绝对是合不来的，于私他是我的情人，但是离开我们情人那层关系，他是助纣为虐的爪牙，也是一个彰显着平庸之恶的特权阶级，就是他这样的家伙破坏社会生态，我的心理有一种极大的矛盾，这段关系本来就是没结果的，我不想投入太多,,,其实桃子也比较可怜吧，我还和他说我喜欢他是因为他像我芹哥哥，，，我发现我以前嘴里是一点禁忌没，，，
+我想起来桃子是个副处级别的官我真是对中国社会释怀了，二十八副处级，实力不高全靠父母，我看他那个脑子做官也到头了，我不知道反正没直接接触过比他大的官，反正因为他我对体制内的没那么仇恨了，主要是看到条子就想起他，对我略显羞涩的结巴样子，哎，要是我俩有一层关系我还要担心那么多？卧槽呀谁知道我那个惊恐，我是事后很久想起来查了他的警衔，反正我想起来他的模样感觉十分可爱，但是他的身份我真的很害怕，我觉得我和他短暂的相处他处处的怪异压根不像普通人，可我被甜蜜蜜包裹住压根没有思考过这么多，我还叫他辞职和我去创业吧，想起来我就想笑，我就是一辈子努力也没他出身起点高，我俩这段露水情缘，我想给彼此内心都留下了不可磨灭的印象吧，我觉得他有点可怜了，怎么一辈子活在父母的阴影里，我有点搞不明白为什么他对我才是诚惶诚恐，他应该是没想明白为什么我对他那么好吧，完全搞不明白我的动机，反正我就觉得爱情就那么奇妙，我一见钟情一个比我大十岁的人，就那么如梦似幻，等我事后很久，我才知道他是什么人，这个也太罗曼蒂克了，一场真正的主体先于身份的情缘，想起来他羞涩的模样，我都不知道他怎么带他手下的人，想起来就好笑，我感觉我在这个方面有点魔怔的出奇了，我告诉他我不考虑和他在一起，玩一玩好了，因为我在政治方面和他绝对是合不来的，于私他是我的情人，但是离开我们情人那层关系，他是助纣为虐的爪牙，也是一个彰显着平庸之恶的特权阶级，就是他这样的家伙破坏社会生态，我的心理有一种极大的矛盾，这段关系本来就是没结果的，我不想投入太多,,,其实桃子也比较可怜吧，我还和他说我喜欢他是因为他像我芹哥哥，，，我发现我以前嘴里是一点禁忌没，，，
 
 到网上人说二代们是咋样咋样的，我心理感觉有点古古怪怪，怎么说呢，其实我算是沾光了吧，我小的时候有个二代朋友，比我大很多，他和我讲古典文学，然后我就捣鼓起古典文学了，和他了不少东西，后来岁数大了因为足够文艺逼很受欢迎，认识了少爷，少爷给我添了一把火，他也是我的老师，虽然是失败的情人，但是成功的老师，因为他我学命理，这才认识青菜，其实他们说的那种趾高气昂的，我也遇见过，但是被我喷到体无完肤😃跑路的跑路了，不跑的就是在求我的认同感，我觉得很奇怪 你和我求啥认同感呢，对我好又见不得我脆弱 这些人死球坏，天天说我多有魅力多有天才，没一个人接受我就是脆弱敏感的，前天倾诉了一下被刺激坏了，他一开始对我很不屑，觉得我不可能真的读过那么多书，认为我只是装逼佬，但是万万没想到我是玩真的，其实他说他对我没有情欲，可是我心里和明镜一样，对我寻求认同感，尤其是男性方面的认同感，搞得我很尬尴，，，明明亲口告诉我，我痛苦的时候可以和他说，但是我觉得诚意实在是不足，算了吧你没有资格，我的心情也挺复杂的，其实这人对我还不错，可是我觉得太没诚意，我对他有一丝同情，读书想当文艺逼但是脑子里其实空空，我在努力帮助他，但是这种富二代是扶不起来的，他肚子里那二两墨水还没让自己认清自己定位，注定成不了事情，哎！我有时候脾气也太大了，随意的喷人，啧，有点可怜啊，那点自尊心，自以为自己多热爱学术啥的，其实就是家里有钱经得起折腾而已，当我不想啊，我又不是那种不需要考虑生存的人，反正也有点感叹天命无常吧，作为非科班出身的在实操中远超那些科班出身的，我也觉得挺开心的，我需要一些认同感，需要来自那些比我更强大的人，可是和我亲密接触的人，没有这种，有些人仅仅只是比我更有资源而已
 
