--- a/2025-7-9.md
+++ b/2025-7-9.md
@@ -55,3 +55,6 @@ AI时代，让各行各业的顶尖精英拥有了打造自己的“知识生产
 
 其实我现在真的很想甜蜜蜜过我的幸福生活，可是甜蜜蜜的代价是先痛苦到极点，可能会把我逼死的痛苦才能换来长久的平静，值得吗，我总是在想情爱的事情，因为这关乎到我的人生上限和下限，而且没什么试错机会，甜美的果实总是要倾注大量的血汗，只怕切开却不是自己想要的那个味道。我现在就在思考那种过度沉默和压抑的人真的适合我吗，什么都不接受，让我感觉到总是轻飘飘的，好像请了个老板回家一样，怕我后悔，其实我还是一个很吊丝的做题家，如果和我约会，去饭店我会觉得你是个傻B，因为我厨艺高超，吃炒菜为什么不让我亲自来，所以我喜欢吃火锅嗯啊，酒吧之类的我更理解不了，我非常保守我认为正常约会不该喝酒，这样我会觉得男方心存不良，虽然我压根喝不倒，而且喝酒干啥，三缺一没人一起打牌喝个吊啊，我就是那么多愁善感，我还没有遭遇最坏的结果，我就每天自己吓死自己，我真怕我吃上顿没下顿，更怕被人排斥，就怕有人看出我这种窘迫然后蛐蛐我，我不相信好运总能次次降临在我身上，我就是魅力十足一时半会也不会有大头愿意承担我的生活成本，而且我性格还很沟槽的，要么别给我要么就对我好点，反正，别人问我要不要一起玩我没有钱也没有时间，我的起点比他们落下太多了，我得用最快的路径和他们齐平，这个环境里最重要的就是社交，没钱也倒刷掉了相当多的无效社交吧，人的身份标签光鲜亮丽但是又没能突破阶层的时候，莫名其妙的社交太多了，反正就是挺辛苦的，其实也不是没人帮，有时候脸皮比肚子重要
 
+我是遇见有背景的人支持我我才愿意去思考创业的事儿，不然我一辈子宁可当个庸庸碌碌的屌丝
+
+😂看见gemini越做越好真的很开心，其实gemini早期我就觉得比chatgpt好用，没别的，不要钱不限额度又没啥敏感词这一块真的太香了
